# rscalc

./: .gitignore  Cargo.toml  LICENSE.txt  Makefile  README.md  build.rs
.cargo/: config
bmpfont/: CMakeLists.txt  bmpfont.cpp
dmcp/: Cargo.toml  check_qspi_crc  main.h  startup_pgm.s  stm32_program.ld
dmcp/src/: main.rs
dmcp/sys/: pgm_syscalls.c
intel_dfp/: Cargo.toml  build.rs
intel_dfp/src/: lib.rs
layout/: Cargo.toml
layout/src/: decimal.rs  font.rs  layout.rs  lib.rs  matrix.rs  number.rs  stack.rs  string.rs  unit.rs  value.rs  vector.rs
math/: Cargo.toml
math/src/: complex.rs  constant.rs  context.rs  format.rs  functions.rs  lib.rs  matrix.rs  number.rs  stack.rs  storage.rs  time.rs  undo.rs  unit.rs  value.rs  vector.rs
src/: catalog.rs  complex.rs  dm42.rs  edit.rs  error.rs  font.rs  functions.rs  input.rs  layout.rs  main.rs  matrix.rs  menu.rs  number.rs  screen.rs  simulated.rs  stack.rs  state.rs  storage.rs  time.rs  undo.rs  unit.rs  value.rs  vector.rs
src/dm42/: catalog.rs  device.rs  functions.rs  input.rs  menu.rs  screen.rs  simulated.rs  state.rs  unit.rs
src/dm42/font/: sans_13.rs  sans_16.rs  sans_20.rs  sans_24.rs
src/font/: mono_13.rs  mono_16.rs  mono_20.rs  mono_24.rs  sans_13.rs  sans_16.rs  sans_20.rs  sans_24.rs
