[package]
name = "calc"
version = "0.1.0"
edition = "2018"

[dependencies.gtk]
version = "0.9"
optional = true

[dependencies.gdk-pixbuf]
version = "0.9"
optional = true

[dependencies.glib]
version = "0.10"
optional = true

[dependencies.intel_dfp]
path = "intel_dfp"
default-features = false

[dependencies.num-bigint]
version = "0.3"
default-features = false
features = []

[dependencies.num-integer]
version = "0.1"
default-features = false

[dependencies.chrono]
version = "0.4"
default-features = false

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

[dependencies.spin]
version = "0.5"

[dependencies.linked_list_allocator]
version = "0.8"

[build-dependencies]
cc = "1.0"

[features]
default = ["intel_dfp/std", "gtk", "gdk-pixbuf", "glib", "chrono/std", "chrono/clock"]
dm42 = []

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
