[package]
name = "calc"
version = "0.1.0"
edition = "2018"

[dependencies]
gtk = { version = "0.9", optional = true }
gdk-pixbuf = { version = "0.9", optional = true }
glib = { version = "0.10", optional = true }
intel_dfp = { path = "intel_dfp", default-features = false }
num-bigint = { version = "0.3", default-features = false, features = [] }
num-integer = { version = "0.1", default-features = false }
chrono = { version = "0.4", default-features = false }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
spin = { version = "0.5" }
linked_list_allocator = { version = "0.8" }

[build-dependencies]
cc = "1.0"

[features]
default = ["intel_dfp/std", "gtk", "gdk-pixbuf", "glib", "chrono/std", "chrono/clock"]
dm42 = []

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
