[package]
name = "rscalc"
version = "0.1.0"
authors = ["Rusty Wagner <rusty.wagner@gmail.com>"]
edition = "2018"

[dependencies]
rscalc_math = { path = "math", default-features = false }
rscalc_layout = { path = "layout", default-features = false }
intel_dfp = { path = "intel_dfp", default-features = false }
num-bigint = { version = "0.3", default-features = false, features = [] }
chrono = { version = "0.4", default-features = false }
lazy_static = { version = "1.4", features = ["spin_no_std"], optional = true }
spin = { version = "0.5", optional = true }
gtk = { version = "0.9", optional = true }
gdk-pixbuf = { version = "0.9", optional = true }
glib = { version = "0.10", optional = true }

[features]
default = ["simulated", "std", "gtk", "gdk-pixbuf", "glib"]
std = ["rscalc_math/std", "rscalc_layout/std", "intel_dfp/std", "chrono/std", "chrono/clock"]
dm42 = ["rscalc_math/dm42", "rscalc_layout/dm42", "lazy_static", "spin", "limited_heap"]
simulated = ["limited_heap"]
limited_heap = ["rscalc_math/limited_heap", "rscalc_layout/limited_heap"]

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
