[package]
name = "rscalc_math"
version = "0.1.0"
authors = ["Rusty Wagner <rusty.wagner@gmail.com>"]
edition = "2018"

[dependencies]
intel_dfp = { path = "../intel_dfp", default-features = false }
num-bigint = { version = "0.3", default-features = false, features = [] }
num-integer = { version = "0.1", default-features = false }
chrono = { version = "0.4", default-features = false }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
spin = { version = "0.5" }
linked_list_allocator = { version = "0.9" }

[features]
default = ["std", "intel_dfp/std"]
dm42 = ["limited_heap"]
limited_heap = []
std = ["chrono/std", "chrono/clock"]
